--- a/wp-content/themes/starting-theme/sass/bootstrap/_navbar.scss
+++ b/wp-content/themes/starting-theme/sass/bootstrap/_navbar.scss
@@ -12,13 +12,12 @@
   position: relative;
   min-height: $navbar-height; // Ensure a navbar always shows (e.g., without a .navbar-brand in collapsed mode)
   margin-bottom: $navbar-margin-bottom;
-  border: 1px solid transparent;
 
   // Prevent floats from breaking the navbar
   @include clearfix;
 
   @media (min-width: $grid-float-breakpoint) {
-    border-radius: $navbar-border-radius;
+    // border-radius: $navbar-border-radius;
   }
 }
 
@@ -395,8 +394,9 @@
 
 // Default navbar
 .navbar-default {
-  background-color: $navbar-default-bg;
-  border-color: $navbar-default-border;
+  background-color: #fff;
+  border-color: #fff;
+  padding: 5px 5px 0 5px;
 
   .navbar-brand {
     color: $navbar-default-brand-color;
