--- a/wp-content/themes/starting-theme/sass/pages/_header.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_header.scss
@@ -6,7 +6,7 @@
   content: " ";
   color: #fff;
   padding: 0 0 0 13px;
-  background-image: url(../images/nav_arrow_down.png);
+  background-image: url(images/nav_arrow_down.png);
   background-repeat: no-repeat;
 }
 
@@ -14,4 +14,312 @@ ul.nav li.menu-item-has-children:hover > ul.dropdown-menu {
   @include md {
     display: block !important;
   }
+}
+
+body {
+  overflow: hidden;
+  background: #000;
+}
+
+header {
+  position: fixed;
+  width: calc(100% - 40px);
+  margin-top: 40px;
+  ul.nav {
+    li {
+      a {
+        text-transform: uppercase;
+        font-size: 12px;
+      }
+      ul {
+        li {
+          a {
+            text-transform:  none;
+          }
+        }
+      }
+    }
+
+  }
+  .social {
+    margin-top: 12px;
+  }
+  .icons {
+    margin-top: -5px;
+    span {
+      width: 20%;
+      position: relative;
+      display: inline-block;
+      text-align: center;
+      height: 40px;
+      border-left: 1px solid #757890;
+      margin-top: 5px;
+      img {
+        padding-top: 5px;
+      }
+    }
+    span:last-of-type {
+      border-left: none;
+    }
+    .hiddennav {
+      background: #757890;
+      height: 125px;
+      margin-top: -65px;
+      padding-top: 80px;
+    }
+  }
+}
+
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(255,255,255, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+  &-content {
+    position: relative;
+    top: 25%;
+    text-align: center;
+    margin-top: 30px;
+    h2 {
+      color: $grey;
+      letter-spacing: 3px;
+      font-family: $font-family-serif;
+      font-size: 25px;
+      margin-bottom: 50px;
+      span {
+        font-size: 18px;
+      }
+    }
+    .consent {
+      font-size: 12px;
+      text-align: left;
+      input[type="checkbox"] {
+        float: left;
+        @include md {
+          margin-left: -15px;
+        }
+      }
+      label {
+        font-weight: 400;
+      }
+    }
+    input[type="text"], input[type="email"], input[type="email"]:focus,  {
+      width: 100%;
+      color: #fff;
+      padding: 8px;
+      background: rgba(0, 0, 0, .45);
+    }
+    .email::-webkit-input-placeholder, .search-input-box::-webkit-input-placeholder {
+      color: #fff;
+    }
+    input[type="submit"], button {
+      color: #fff;
+      font-size: 10px;
+      text-transform: uppercase;
+      padding: 15px;
+      width: 100%;
+      background: rgba(0, 0, 0, .45);
+      font-weight: 600;
+      transition: .5s;
+    }
+    input[type="submit"]:hover, button:hover {
+      color: #fff;
+      font-size: 10px;
+      text-transform: uppercase;
+      padding: 15px;
+      background: rgba(0, 0, 0, .8);
+      font-weight: 600;
+    }
+    a.policy {
+      margin-top: 50px;
+      text-decoration: none;
+      color: rgba(88, 84, 77, .8);
+      font-size: 12px;
+      display: block;
+      transition: 0.3s;
+    }
+    a.policy:hover, a.policy:focus {
+      color: #000;
+    }
+  }
+  a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  a:hover, a:focus {
+    color: #f1f1f1;
+  }
+  .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    color: #616569;
+    transition: .5s;
+    &:hover {
+      color: #53194F;
+      transform: rotate(90deg);
+    }
+  }
+}
+
+@media screen and (max-height: 450px) {
+  .overlay {overflow-y: auto;}
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
+
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  right: 0;
+  color: #fff;
+  background-color: #757890;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  .options {
+    text-align: center;
+    height: 110px;
+    > div {
+      height: 110px;
+      position: relative;
+      p, a {
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        z-index: 999;
+      }
+    }
+  }
+  .search-form {
+    margin-bottom: 25px;
+    padding: 0 25px;
+    label {
+      width: 100%;
+    }
+    input {
+      text-transform: uppercase;
+      font-weight: 300;
+      padding: 6px;
+      background: #fff url(images/search_icon.svg) no-repeat;
+      background-position: 95%;
+      width: 100%;
+    }
+    .search-submit {
+      background: #BAC2C6;
+      padding: 5px;
+      color: #fff;
+      font-size: 14px;
+      display: none;
+    }
+  }
+  #loginform {
+    font-weight: 300;
+    background: #5B646A;
+    padding: 25px;
+    height: 100%;
+    input[type="text"] {
+      background: #fff url(images/username_icon.svg) left center no-repeat;
+      background-position: 10px;
+    }
+    input[type="password"] {
+      background: #fff url(images/password_icon.svg) left center no-repeat;
+      background-position: 10px;
+    }
+    input[type="text"], input[type="password"] {
+      width: 100%;
+      padding: 6px 6px 6px 35px;
+    }
+    .login-submit {
+      .button {
+        width: 100%;
+        background: #BAC2C6;
+        padding: 15px;
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 600;
+      }
+    }
+  }
+  ul {
+    list-style: none;
+    padding: 25px 0 25px 25px;
+    margin: 0;
+    li {
+      display: block;
+      border-bottom: 1px solid rgba(255,255,255,.4);
+      ul.dropdown-menu {
+        margin: 0;
+        padding: 0;
+        li {
+          border-bottom: none;
+          margin: 0;
+          padding: 0;
+          a {
+            text-transform: none;
+            font-weight: 300;
+            font-size: 12px;
+            color: rgba(255,255,255,.6);
+            padding: 1px 0 5px 8px;
+          }
+          a:hover, a:focus {
+            color: #000;
+            background: none;
+          }
+        }
+      }
+      a {
+        padding: 7px 0 7px 0;
+        font-weight: 600;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 14px;
+        color: #fff;
+        display: block;
+        transition: 0.3s;
+      }
+      a.active {
+        padding: 7px 0 7px 0;
+      }
+      a:hover {
+        color: #53194F;
+        background-color: none;
+      }
+    }
+  }
+
+  .closebtn_wrapper {
+    background: #fff;
+    .closebtn {
+      color: #757890;
+      font-size: 32px;
+      line-height: 32px;
+    }
+  }
+
+}
+
+.accordion li ul.dropdown-menu, .accordion li ul.sub-menu {
+  display: none;
 }
