--- a/wp-content/themes/starting-theme/sass/typography/_typography.scss
+++ b/wp-content/themes/starting-theme/sass/typography/_typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Montserrat:300,400,500,600,700');
+
 body,
 button,
 input,
