--- a/wp-content/themes/starting-theme/sass/bootstrap/_scaffolding.scss
+++ b/wp-content/themes/starting-theme/sass/bootstrap/_scaffolding.scss
@@ -49,7 +49,8 @@ textarea {
 a {
   color: $link-color;
   text-decoration: none;
-
+  transition: .5s;
+  
   &:hover,
   &:focus {
     color: $link-hover-color;
