--- a/wp-content/themes/starting-theme/sass/elements/_elements.scss
+++ b/wp-content/themes/starting-theme/sass/elements/_elements.scss
@@ -34,7 +34,7 @@ figure {
 	position: absolute;
 	text-align: center;
 	top: 50%;
-	width: calc(100%);
+	width: calc(100% - 30px);
 	-webkit-transform: translateY(-50%);
 	-moz-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
@@ -42,4 +42,161 @@ figure {
 	transform: translateY(-50%);
 }
 
+a.policy {
+	margin-top: 50px;
+	text-decoration: none;
+	color: rgba(88, 84, 77, .8);
+	font-size: 12px;
+	display: block;
+	transition: 0.3s;
+	text-align: center;
+}
+a.policy:hover, a.policy:focus {
+	color: #000;
+}
+
 @import "tables";
+
+.container-fluid.stockists {
+	padding-left: 50px !important;
+  padding-right: 50px !important;
+}
+
+.stockists {
+	padding-top: 100px;
+	padding-bottom: 100px;
+	background: url(images/stockists_bg.jpg) center center no-repeat fixed;
+	background-size: cover;
+	position: relative;
+	margin-bottom: 15px;
+	color: #fff;
+	h2 {
+		text-transform: lowercase;
+		text-align: center;
+		font-family: $font-family-serif;
+		// line-height: 2em;
+		font-size: 32px;
+		font-weight: 400;
+		@include md {
+			font-size: 43px;
+		}
+		@include lg {
+			font-size: 54px;
+		}
+	}
+	p {
+		text-align: center;
+		margin: 25px 10%;
+		@include md {
+			margin: 50px 20%;
+		}
+	}
+	&_locations {
+		color: #fff;
+		position: relative;
+		text-align: center;
+		margin-bottom: 15px;
+		// margin: 100px 50px;
+		border-style: solid;
+		border-width: 26px 26px 27px 27px;
+		-moz-border-image: url(images/border.png) 26 26 27 27 repeat;
+		-webkit-border-image: url(images/border.png) 26 26 27 27 repeat;
+		-o-border-image: url(images/border.png) 26 26 27 27 repeat;
+		border-image: url(images/border.png) 26 26 27 27 fill repeat;
+		h4 {
+			font-family: $font-family-serif;
+			font-size: 32px;
+			span {
+				font-size: 20px;
+			}
+		}
+		p {
+			text-align: center;
+			font-weight: 700;
+			font-size: 11px;
+			padding: 0;
+			margin: 0;
+		}
+		a {
+			color: #fff;
+			font-weight: 600;
+		}
+		button {
+			margin-top: 15px;
+			display: inline-block;
+			background: #A1BEDE;
+			color: #fff;
+			text-transform: uppercase;
+			font-size: 10px;
+			padding: 15px 10px;
+			border-radius: 5px;
+			color: #fff;
+			font-weight: 600;
+			&:visited {
+				color: #fff;
+			}
+			&:hover {
+				background: #fff;
+				color: #A1BEDE;
+			}
+		}
+		label {
+			text-align: left;
+			font-weight: 600;
+			width: 100%;
+			font-size: 10px;
+		}
+		input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], input[type="number"], input[type="tel"], input[type="range"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="color"], textarea {
+			width: 100%;
+		}
+		.consent {
+			font-size: 11px;
+			text-align: left;
+			&_wrapper {
+				padding: 0 20px;
+			}
+			input {
+				margin-left: -15px;
+				margin-right: 5px;
+			}
+			a {
+				font-weight: 600;
+				color: #fff;
+			}
+		}
+		.wpcf7-submit {
+			float: right;
+			background: #A1BEDE;
+			color: #fff;
+			text-transform: uppercase;
+			font-size: 10px;
+			padding: 15px 30px;
+			border-radius: 5px;
+			color: #fff;
+			font-weight: 600;
+			transition: .5s;
+			&:hover {
+				background: #fff;
+				color: #A1BEDE;
+			}
+		}
+		.col-md-3 {
+			@include md {
+				border-left: 2px solid #fff;
+				padding-bottom: 15px;
+			}
+			&:first-of-type {
+				border: none;
+			}
+		}
+	}
+	.collapse {
+		margin: 0;
+		padding: 0;
+	}
+}
+
+	#map {
+	  height: 600px;
+		margin-bottom: 15px;
+	}
