--- a/wp-content/themes/starting-theme/sass/pages/_footer.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_footer.scss
@@ -1,8 +1,107 @@
 footer {
-  background: #000;
-  padding: 5px;
+  background: #aba19e;
+  padding: 50px 15px 5px 15px;
+  position: relative;
+  z-index: -1;
+  @include md {
+    background: url(images/footer_bg@2x.jpg);
+    background-size: cover;
+    padding: 150px 100px 5px 15px;
+  }
   color: #fff;
-  a {
-    color: pink
+  .menu_wrapper {
+    border-left: 1px solid #fff;
+    list-style: none;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    position: relative;
+    z-index: 0;
+    p {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: none;
+      -webkit-transform-origin: 12px 12px;
+      transform-origin: 12px 12px;
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);
+      font-weight: 600;
+      font-size: 14px;
+      text-transform: uppercase;
+    }
+    ul {
+      padding: 0 0 0 25px;
+      margin: 0;
+      list-style: none;
+      z-index: 0;
+      a, a:visited {
+        color: #fff;
+        font-weight: 300;
+      }
+      a:hover {
+        color: #000;
+        font-weight: 600;
+      }
+    }
+  }
+  .signature {
+    margin-top: 25px;
+    margin-bottom: 15px;
+    background: #fff;
+    padding: 10px;
+    color: #58544D;
+    font-size: 13px;
+    font-weight: 300;
+    .copyright {
+      margin-top: 10px;
+    }
+    .byline {
+      font-size: 10px;
+      margin-top: 5px;
+      color: rgba(88, 84, 77, .4);
+      display: block;
+      a {
+        font-size: 10px;
+        color: rgba(88, 84, 77, .4);
+        font-weight: 600;
+      }
+    }
+    .links {
+      @include md {
+        text-align: right;
+      }
+      a {
+        border-left: 2px solid #58544D;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 2%;
+        padding-right: 2%;
+      }
+      .social {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 20px;
+        display: inline-block;
+        border-left: 2px solid #58544D;
+        a {
+          border-left: none;
+          padding-left: 0;
+          padding-right: 5px;
+        }
+      }
+      a {
+        text-transform: uppercase;
+        font-weight: 600;
+        text-align: center;
+      }
+    }
+    a {
+      color: #58544D;
+      font-size: 13px;
+    }
+    a:hover {
+      color: #000;
+      font-size: 13px;
+    }
   }
 }
