--- a/wp-content/themes/starting-theme/sass/pages/_rugs.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_rugs.scss
@@ -5,14 +5,19 @@
 }
 
 .rugs_head_rotate {
-  width: 100%;
-  height: 1000px;
   position: absolute;
-  top: -60%;
-  right: -40%;
-  @include xxl {
+  z-index: 5;
+  @include md {
+    width: 125%;
+    height: 1000px;
     top: -80%;
-    right: -40%;
+    right: -55%;
+  }
+  @include lg {
+    width: 120%;
+    height: 1000px;
+    top: -80%;
+    right: -57%;
   }
   // background: url(images/rugs_rotate_bg.png) center center / cover;
   // @include xl {
@@ -25,6 +30,8 @@
   margin-top: 0;
   padding-top: 100px;
   padding-bottom: 50px;
+  margin-left: -20px;
+  margin-right: -20px;
   @include md {
     padding-top: 150px;
     padding-bottom: 250px;
@@ -43,7 +50,7 @@
       }
       position: absolute;
       bottom: 0;
-      z-index: 99999;
+      // z-index: 99999;
       left: 15px;
       width: 100%;
     }
@@ -52,143 +59,123 @@
 }
 
 .rugs_info.row {
-  margin-left: -30px !important;
-  margin-right: -30px !important;
+  margin-left: -35px !important;
+  margin-right: -35px !important;
 }
 
-
-.rugs_info {
-  // background: url(images/rugs_bg.jpg) center top / cover;
-  color: #fff;
-  h2 {
-    font-size: 40px;
-    margin-top: 0;
-  }
-  .row {
-    // border-top: 1px solid #fff;
-  }
-  p.counter {
+.rugs_steps {
+  position: relative;
+  svg {
+    position: absolute;
+    z-index: 1;
+    height: 1470px;
     @include lg {
-      display: none;
+      top: -337.5px;
     }
   }
-  .count, .counter {
-    font-size: 68px;
-    font-weight: 600;
-    line-height: .75em;
-    @include xldown {
-      // width: 100%;
+  .row.step {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .step {
+    &_scroll_left {
+      position: absolute;
+      top: 350px;
+      left: 50px;
+      @include lg {
+        top: 150px;
+        left: 150px;
+      }
+      z-index: 2;
     }
-    p {
-      @include xldown {
-        // display: none;
+    &_scroll_right {
+      position: absolute;
+      top: 350px;
+      right: 50px;
+      @include lg {
+        top: 150px;
+        right: 150px;
+      }
+      z-index: 2;
+    }
+    h2 {
+      font-size: 40px;
+      margin-top: 0;
+      font-weight: 700;
+    }
+    p.counter {
+      font-weight: 700;
+      @include lg {
+        display: none;
       }
     }
-    @include xl {
-      display: block;
-    }
-    &_mobile {
+    .count, .counter {
+      font-size: 68px;
+      font-weight: 700;
+      line-height: .75em;
+      &_mobile {
 
+      }
     }
-  }
-  .valign {
-    @include xs {
+    color: #fff;
+    // z-index: 1;
+    position: relative;
+    height: 1470px;
+    @include lg {
+      height: 735px;
+    }
+    .valign {
+      &.right {
+        right: 0;
+      }
+      z-index: 999999;
+      padding: 50px;
+      font-size: 14px;
       position: absolute;
       width: 100%;
-      top: 35%;
-    }
-    @include lg {
-      top: 45%;
-    }
-
-  }
-  &__left {
-    width: 100%;
-    overflow: hidden;
-    @include xs {
-      float: right;
-      width: 650px;
-      // max-width: 100%;
-      text-align: right;
-      background-color: transparent !important;
-      height: 1470px;
-      overflow: visible;
-    }
-    svg {
-      display: none;
-      @include xs {
-        display: block;
+      top: 30%;
+      @include md {
+        top: 40%;
+        width: 650px;
       }
-      // height: 100%;
-    }
-    // padding: 400px 0 0 0;
-    position: relative;
-    @include lg {
-      padding-top: 40%;
-      margin-top: -42%;
-    }
-    @include xldown {
-      // padding-top: 400px;
-      // width: 45%;
-    }
-  }
-  .row {
-    position: relative;
-    margin-left: -30px;
-    margin-right: -30px;
-  }
-  .wrapper {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    right: 0;
-    margin-top: 35%;
-    z-index: 1;
-  }
-  &__right {
-    width: 100%;
-    overflow: hidden;
-    padding: 15px;
-    &:first-of-type {
-      // margin-top: -25%;
-    }
-    @include xs {
-      float: left;
-      width: 650px;
-      overflow: visible;
-      // max-width: 100%;
-    }
-    svg {
-      display: none;
-      @include xs {
-        display: block;
+      @include lg {
+        top: 40%;
       }
-      height: 100%;
-    }
-    @include xs {
-      background-color: transparent !important;
-      height: 1470px;
-    }
-    padding: 20px;
-    position: relative;
-    @include lg {
-      padding-top: 35%;
-      margin-top: -42%;
-    }
-    @include xldown {
-      // padding-top: 400px;
-      // width: 45%;
+      a {
+        padding: 15px 20px;
+        font-size: 10px;
+        border-radius: 5px;
+        margin-top: 25px;
+        font-weight: 600;
+        display: inline-block;
+        background: #000;
+        color: #fff;
+        text-transform: uppercase;
+        &:hover {
+          background: #fff;
+          color: #000;
+        }
+      }
     }
   }
 }
 
 .rugs_info_bottom {
   margin-bottom: 15px;
-  margin-left: -30px !important;
-  margin-right: -30px !important;
+  margin-left: -35px !important;
+  margin-right: -35px !important;
   color: #262622;
+  svg {
+    width: 100%;
+    height: 250px;
+  }
   img.stretch {
     width: 100%;
+    @include lg {
+      position: relative;
+      margin-top: -337.5px;
+      z-index: 1;
+    }
   }
   &_point {
     // margin-left: 0 !important;
