--- a/wp-content/themes/starting-theme/sass/pages/_coordination.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_coordination.scss
@@ -9,7 +9,7 @@
     padding-right: 30px;
     padding-bottom: 25px;
     @include md {
-      padding-bottom: 100px;
+      padding-bottom: 0;
       padding-left: 40px;
       padding-right: 40px;
     }
@@ -22,6 +22,65 @@
     }
     p:last-of-type {
       margin-bottom: 100px;
+    }
+    &_more {
+      font-size: 12px;
+      text-transform: uppercase;
+      font-weight: 600;
+      color: rgba(255, 255, 255, .4);
+      padding-bottom: 25px;
+    }
+    &_view {
+      .link {
+        transition: .5s;
+        position: relative;
+        &_shadow {
+          background: rgb(0,0,0);
+          background: linear-gradient(0deg, rgba(0,0,0,.4) 0%, rgba(0,0,0,0) 90%);
+          height: 40px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+        }
+        &:hover {
+          background: #000;
+          a {
+            color: #fff;
+          }
+        }
+        &:first-of-type {
+          &:hover {
+            background: #000;
+            color: #fff;
+            a {
+              color: #fff;
+            }
+          }
+          background: #A39C8B;
+        }
+        &:last-of-type {
+          &:hover {
+            background: #000;
+            a {
+              color: #fff;
+            }
+          }
+          background: #BECACC;
+        }
+        font-size: 22px;
+        background: #fff;
+        text-align: center;
+        height: 140px;
+        padding-top: 15px;
+        span {
+          display: block;
+          font-weight: 700;
+        }
+        a {
+          color: #2D353C;
+        }
+      }
     }
     &_download {
       font-size: 12px;
