--- a/wp-content/themes/starting-theme/js/plugins/storeLocator/templates/location-list-description.html
+++ b/wp-content/themes/starting-theme/js/plugins/storeLocator/templates/location-list-description.html
@@ -39,7 +39,7 @@
 
 			<div class="col-md-2">
 				{{#if web}}
-					<div class="loc-web"><a href="http://{{niceURL web}}" target="_blank">View website</a></div>
+					<div class="loc-web"><a href="http://{{niceURL web}}" target="_blank">View Website</a></div>
 				{{/if}}
 			</div>
 
