--- a/wp-content/themes/starting-theme/style.css
+++ b/wp-content/themes/starting-theme/style.css
@@ -7378,18 +7378,12 @@ footer {
       .searchby .range {
         padding-left: 0;
         padding-right: 15px; } }
-    .searchby .range__wrapper {
-      background: url(images/range_bg@2x.jpg) center center;
-      background-size: cover; }
     .searchby .range a {
       background-color: #55757B; }
   .searchby .style {
     color: #505050;
     padding-left: 0;
     padding-right: 0; }
-    .searchby .style__wrapper {
-      background: url(images/style_bg@2x.jpg) center center;
-      background-size: cover; }
     .searchby .style a {
       background-color: #505050; }
   .searchby .colour {
@@ -7400,9 +7394,6 @@ footer {
       .searchby .colour {
         padding-right: 0;
         padding-left: 15px; } }
-    .searchby .colour__wrapper {
-      background: url(images/colour_bg@2x.jpg) center center;
-      background-size: cover; }
     .searchby .colour a {
       background-color: #53194F; }
 
@@ -7647,7 +7638,7 @@ footer {
   padding-bottom: 25px; }
   @media screen and (min-width: 992px) {
     .brochure_content {
-      padding-bottom: 100px;
+      padding-bottom: 0;
       padding-left: 40px;
       padding-right: 40px; } }
   .brochure_content h2 {
@@ -7658,6 +7649,50 @@ footer {
     margin: 0; }
   .brochure_content p:last-of-type {
     margin-bottom: 100px; }
+  .brochure_content_more {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.4);
+    padding-bottom: 25px; }
+  .brochure_content_view .link {
+    transition: .5s;
+    position: relative;
+    font-size: 22px;
+    background: #fff;
+    text-align: center;
+    height: 140px;
+    padding-top: 15px; }
+    .brochure_content_view .link_shadow {
+      background: black;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 90%);
+      height: 40px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%; }
+    .brochure_content_view .link:hover {
+      background: #000; }
+      .brochure_content_view .link:hover a {
+        color: #fff; }
+    .brochure_content_view .link:first-of-type {
+      background: #A39C8B; }
+      .brochure_content_view .link:first-of-type:hover {
+        background: #000;
+        color: #fff; }
+        .brochure_content_view .link:first-of-type:hover a {
+          color: #fff; }
+    .brochure_content_view .link:last-of-type {
+      background: #BECACC; }
+      .brochure_content_view .link:last-of-type:hover {
+        background: #000; }
+        .brochure_content_view .link:last-of-type:hover a {
+          color: #fff; }
+    .brochure_content_view .link span {
+      display: block;
+      font-weight: 700; }
+    .brochure_content_view .link a {
+      color: #2D353C; }
   .brochure_content_download {
     font-size: 12px;
     text-transform: uppercase;
@@ -9625,6 +9660,12 @@ footer {
     padding-right: 0;
     padding-left: 0; }
     @media screen and (min-width: 992px) {
+      .offices .office__map iframe:first-of-type {
+        padding-right: 7.5px; } }
+    @media screen and (min-width: 992px) {
+      .offices .office__map iframe:last-of-type {
+        padding-left: 7.5px; } }
+    @media screen and (min-width: 992px) {
       .offices .office__map {
         padding-left: 0; } }
 
@@ -9632,20 +9673,27 @@ footer {
   margin-top: -20px; }
 
 .rugs_head_rotate {
-  width: 100%;
-  height: 1000px;
   position: absolute;
-  top: -60%;
-  right: -40%; }
-  @media screen and (min-width: 1600px) {
+  z-index: 5; }
+  @media screen and (min-width: 992px) {
     .rugs_head_rotate {
+      width: 125%;
+      height: 1000px;
       top: -80%;
-      right: -40%; } }
+      right: -55%; } }
+  @media screen and (min-width: 1200px) {
+    .rugs_head_rotate {
+      width: 120%;
+      height: 1000px;
+      top: -80%;
+      right: -57%; } }
 
 .rugs {
   margin-top: 0;
   padding-top: 100px;
   padding-bottom: 50px;
+  margin-left: -20px;
+  margin-right: -20px;
   background: #7F7D84;
   overflow: hidden;
   color: #fff; }
@@ -9659,7 +9707,6 @@ footer {
     font-size: 25px;
     position: absolute;
     bottom: 0;
-    z-index: 99999;
     left: 15px;
     width: 100%; }
     @media screen and (min-width: 992px) {
@@ -9667,97 +9714,104 @@ footer {
         font-size: 35px; } }
 
 .rugs_info.row {
-  margin-left: -30px !important;
-  margin-right: -30px !important; }
+  margin-left: -35px !important;
+  margin-right: -35px !important; }
 
-.rugs_info {
-  color: #fff; }
-  .rugs_info h2 {
-    font-size: 40px;
-    margin-top: 0; }
-  @media screen and (min-width: 1200px) {
-    .rugs_info p.counter {
-      display: none; } }
-  .rugs_info .count, .rugs_info .counter {
-    font-size: 68px;
-    font-weight: 600;
-    line-height: .75em; }
-    @media screen and (min-width: 1440px) {
-      .rugs_info .count, .rugs_info .counter {
-        display: block; } }
-  @media screen and (min-width: 480px) {
-    .rugs_info .valign {
+.rugs_steps {
+  position: relative; }
+  .rugs_steps svg {
+    position: absolute;
+    z-index: 1;
+    height: 1470px; }
+    @media screen and (min-width: 1200px) {
+      .rugs_steps svg {
+        top: -337.5px; } }
+  .rugs_steps .row.step {
+    margin-left: -20px;
+    margin-right: -20px; }
+  .rugs_steps .step {
+    color: #fff;
+    position: relative;
+    height: 1470px; }
+    .rugs_steps .step_scroll_left {
+      position: absolute;
+      top: 350px;
+      left: 50px;
+      z-index: 2; }
+      @media screen and (min-width: 1200px) {
+        .rugs_steps .step_scroll_left {
+          top: 150px;
+          left: 150px; } }
+    .rugs_steps .step_scroll_right {
+      position: absolute;
+      top: 350px;
+      right: 50px;
+      z-index: 2; }
+      @media screen and (min-width: 1200px) {
+        .rugs_steps .step_scroll_right {
+          top: 150px;
+          right: 150px; } }
+    .rugs_steps .step h2 {
+      font-size: 40px;
+      margin-top: 0;
+      font-weight: 700; }
+    .rugs_steps .step p.counter {
+      font-weight: 700; }
+      @media screen and (min-width: 1200px) {
+        .rugs_steps .step p.counter {
+          display: none; } }
+    .rugs_steps .step .count, .rugs_steps .step .counter {
+      font-size: 68px;
+      font-weight: 700;
+      line-height: .75em; }
+    @media screen and (min-width: 1200px) {
+      .rugs_steps .step {
+        height: 735px; } }
+    .rugs_steps .step .valign {
+      z-index: 999999;
+      padding: 50px;
+      font-size: 14px;
       position: absolute;
       width: 100%;
-      top: 35%; } }
-  @media screen and (min-width: 1200px) {
-    .rugs_info .valign {
-      top: 45%; } }
-  .rugs_info__left {
-    width: 100%;
-    overflow: hidden;
-    position: relative; }
-    @media screen and (min-width: 480px) {
-      .rugs_info__left {
-        float: right;
-        width: 650px;
-        text-align: right;
-        background-color: transparent !important;
-        height: 1470px;
-        overflow: visible; } }
-    .rugs_info__left svg {
-      display: none; }
-      @media screen and (min-width: 480px) {
-        .rugs_info__left svg {
-          display: block; } }
-    @media screen and (min-width: 1200px) {
-      .rugs_info__left {
-        padding-top: 40%;
-        margin-top: -42%; } }
-  .rugs_info .row {
-    position: relative;
-    margin-left: -30px;
-    margin-right: -30px; }
-  .rugs_info .wrapper {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    right: 0;
-    margin-top: 35%;
-    z-index: 1; }
-  .rugs_info__right {
-    width: 100%;
-    overflow: hidden;
-    padding: 15px;
-    padding: 20px;
-    position: relative; }
-    @media screen and (min-width: 480px) {
-      .rugs_info__right {
-        float: left;
-        width: 650px;
-        overflow: visible; } }
-    .rugs_info__right svg {
-      display: none;
-      height: 100%; }
-      @media screen and (min-width: 480px) {
-        .rugs_info__right svg {
-          display: block; } }
-    @media screen and (min-width: 480px) {
-      .rugs_info__right {
-        background-color: transparent !important;
-        height: 1470px; } }
-    @media screen and (min-width: 1200px) {
-      .rugs_info__right {
-        padding-top: 35%;
-        margin-top: -42%; } }
+      top: 30%; }
+      .rugs_steps .step .valign.right {
+        right: 0; }
+      @media screen and (min-width: 992px) {
+        .rugs_steps .step .valign {
+          top: 40%;
+          width: 650px; } }
+      @media screen and (min-width: 1200px) {
+        .rugs_steps .step .valign {
+          top: 40%; } }
+      .rugs_steps .step .valign a {
+        padding: 15px 20px;
+        font-size: 10px;
+        border-radius: 5px;
+        margin-top: 25px;
+        font-weight: 600;
+        display: inline-block;
+        background: #000;
+        color: #fff;
+        text-transform: uppercase; }
+        .rugs_steps .step .valign a:hover {
+          background: #fff;
+          color: #000; }
 
 .rugs_info_bottom {
   margin-bottom: 15px;
-  margin-left: -30px !important;
-  margin-right: -30px !important;
+  margin-left: -35px !important;
+  margin-right: -35px !important;
   color: #262622; }
+  .rugs_info_bottom svg {
+    width: 100%;
+    height: 250px; }
   .rugs_info_bottom img.stretch {
     width: 100%; }
+    @media screen and (min-width: 1200px) {
+      .rugs_info_bottom img.stretch {
+        position: relative;
+        margin-top: -337.5px;
+        z-index: 1; } }
   .rugs_info_bottom_point_wrapper {
     background: #BAAF6E;
     padding: 20px 20px 50px 20px;
