design # was being picked up as a link in some browser

--- a/wp-content/themes/starting-theme/sass/pages/_basket.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_basket.scss
@@ -39,6 +39,17 @@
     z-index: 100;
 }
 
+.text-left {
+
+  a {
+    color: #525c65;
+    &:hover {
+      color: #525c65;
+    }
+  }
+
+}
+
 
 .lala-alert {
     position: relative;
