updating links to show from live site

--- a/wp-content/themes/starting-theme/js/plugins/storeLocator/templates/location-list-description.html
+++ b/wp-content/themes/starting-theme/js/plugins/storeLocator/templates/location-list-description.html
@@ -24,7 +24,7 @@
 					{{/if}}
 					<div class="loc-directions">
 						<a href="https://maps.google.com/maps?saddr={{origin}}&amp;daddr={{address1}} {{address2}} {{city}}, {{state}} {{zip}}" target="_blank">
-							<img src="/wp-content/themes/starting-theme/images/directions.svg" alt="Directions to {{name}}"><br />
+							<img src="https://ulstercarpets.com/residential/wp-content/themes/starting-theme/images/directions.svg" alt="Directions to {{name}}"><br />
 							{{distance}} {{length}} (approx)
 						</a>
 					</div>
