--- a/wp-content/themes/starting-theme/sass/pages/_rugs.scss
+++ b/wp-content/themes/starting-theme/sass/pages/_rugs.scss
@@ -78,6 +78,9 @@
     margin-right: -20px;
   }
   .step {
+    @include md {
+      background-size: cover !important;
+    }
     &_scroll_left {
       position: absolute;
       top: 350px;
